tests/snapshots/integration__integration_tests__switch__switch_error_path_occupied.snap
---
source: tests/integration_tests/switch.rs
assertion_line: 48
info:
  program: wt
  args:
    - switch
    - "--create"
    - occupied-branch
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
❌ [31mDirectory already exists: [1m[REPO].occupied-branch[22m[39m

💡 [2mRemove with [90mrm -rf [REPO].occupied-branch[39m or use a different branch name[22m
