tests/snapshots/integration__integration_tests__switch__switch_execute_existing.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - existing-exec
    - "--execute"
    - "echo 'existing worktree' > existing.txt"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mSwitched to worktree for [1m[32mexisting-exec[0m[32m at [1m[32m[WORKTREE_EXISTING_EXEC][0m[0m
🔄 [36mExecuting (--execute):[0m
[107m [0m  [1m[34mecho[0m [32m'existing worktree'[0m [36m>[0m existing.txt[0m

----- stderr -----
